added product page

--- a/changes.txt
+++ b/changes.txt
@@ -1,13 +1,10 @@
-Our manufacturing process - 
-High-quality ductile iron casting using state-of-the-art induction furnaces. -> ductile iron is casted into the mould using a semi-automatic pouring system.
-
 check email id pricing
 
-9609969999
+factory address
+
+contact us - whatsapp
 
 cast and ductile iron based products
-
-remove office hours. 
 
 products - 
 * bollards (ductile iron) - reliance
