--- a/changes.txt
+++ b/changes.txt
@@ -1,10 +1,8 @@
 check email id pricing
 
-factory address
+registered office address
 
-contact us - whatsapp
-
-cast and ductile iron based products
+SEO for google search
 
 products - 
 * bollards (ductile iron) - reliance
@@ -13,17 +11,14 @@ products -
 * automobile (will share)
 * base plate
 
-
 base plate
 
-Kacper Zygmunt
-10:26 PM
+
 spectre meter 
 microscope 
 Universal strength testing machine
 
-Kacper Zygmunt
-10:29 PM
+
 Our manufacturing process goes through a series of testing-
 The steel in its liquid state is tested in our Liquid Metal Lab using a spectre meter 
 
